Modified HTML and styles. Separated SearchPage on react components

--- a/public/main.html
+++ b/public/main.html
@@ -5,39 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="/styles/css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie|Roboto:300&display=swap" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
-<section class="hero background-hero-image is-fullheight">
-    <div class="hero-body container">
-        <div class="is-centered search-wrapper">
-            <div class="title-wrapper has-text-centered">
-                <h1 class="title logo-font is-centered">
-                    Chillit
-                </h1>
-            </div>
-            <div class="search-menu-wrapper">
-                <div class="field has-addons search-menu">
-                    <div class="control">
-                        <button class="button search-menu-item search-menu-select">Казань</button>
-                    </div>
-                    <div class="control is-expanded">
-                        <div class="search-menu-item search-menu-tags-input-wrapper">
-                            <input class="input search-menu-tags-input" placeholder="Search..." value="#тэги" />
-                            <span class="input-highlight">
-                        </div>
-                        <div class="underline"></div>
-                    </div>
-                    <div class="control">
-                        <button class="button search-menu-item search-menu-button is-primary">Искать</button>
-                    </div>
+    <section class="hero background-hero-image is-fullheight">
+        <div class="hero-body container">
+            <div class="is-centered search-wrapper">
+                <div class="title-wrapper has-text-centered">
+                    <h1 class="title logo-font is-centered">
+                        Chillit
+                    </h1>
                 </div>
+                <div class="search-menu-wrapper">
+                    <div class="field has-addons search-menu">
+                        <div class="control">
+                            <button class="button search-menu-item search-menu-select">Казань</button>
+                        </div>
+                        <div class="control is-expanded">
+                            <div class="search-menu-item search-menu-tags-input-wrapper">
+                                <input class="input search-menu-tags-input" placeholder="Search..." value="#тэги"/>
+                                <span class="input-highlight"></span>
+                            </div>
+                            <div class="underline"></div>
+                        </div>
+                        <div class="control">
+                            <button class="button search-menu-item search-menu-button is-primary">Искать</button>
+                        </div>
+                    </div>
 
+                </div>
             </div>
-        </div>
 
-    </div>
-</section>
+        </div>
+    </section>
 </body>
 </html>
