--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta
-      name="description"
-      content="Chillit web app"
+            name="description"
+            content="Chillit web app"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Chillit frontend</title>
-  </head>
-  <body>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <title>Chillit!</title>
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/css/styles.css">
+</head>
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
+</body>
 </html>
